# memforge

./: .gitignore  .mcp.json  CMakeLists.txt  LICENSE  README.md
include/core/: anti_anticheat.h  aob_scanner.h  cheat_table.h  engine_detector.h  hotkey_manager.h  lua_engine.h  manual_mapper.h  memory_scanner.h  memory_snapshot.h  memory_writer.h  packet_inspector.h  pointer_scanner.h  process_manager.h  stealth.h  structure_dissector.h  trainer_builder.h  undo_history.h  value_freezer.h
include/gui/: app.h
include/speedhack/: speedhack.h
scripts/: build.bat  setup.bat
src/core/: anti_anticheat.cpp  aob_scanner.cpp  cheat_table.cpp  engine_detector.cpp  hotkey_manager.cpp  lua_engine.cpp  manual_mapper.cpp  memory_scanner.cpp  memory_snapshot.cpp  memory_writer.cpp  packet_inspector.cpp  pointer_scanner.cpp  process_manager.cpp  stealth.cpp  structure_dissector.cpp  trainer_builder.cpp  undo_history.cpp  value_freezer.cpp
src/gui/: app.cpp  main.cpp  renderer_dx11.cpp  speedhack_controller.cpp  ui_anticheat.cpp  ui_aob_scanner.cpp  ui_hex_viewer.cpp  ui_hotkeys.cpp  ui_manual_mapper.cpp  ui_network.cpp  ui_pointer_scanner.cpp  ui_process_selector.cpp  ui_scanner.cpp  ui_script_editor.cpp  ui_snapshots.cpp  ui_speed_hack.cpp  ui_stealth.cpp  ui_structure_dissector.cpp  ui_trainer_builder.cpp  ui_undo_history.cpp
src/speedhack/: speedhack_dll.cpp
